--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>HTML Academy: Техномарт</title>
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -19,11 +20,16 @@
           <img src="img\logo-technomart.svg" width="109" height="18" alt="Техномарт">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search">
-          <label for="search" class="visually-hidden">Поиск</label>
-          <input id="search" type="search" placeholder="Поиск">
+          <input id="search" type="search" placeholder="Поиск" class="search-input">
+          <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
+            <path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+          </svg>  
+          <label for="search" class="search-label">
+            <span class="visually-hidden">Поиск:</span>
+          </label>
         </form>
         <ul class="top-links">
-          <li class="top-link"><a href="#">Закладки: 0</a></li>
+          <li class="top-link bookmarks"><a href="#">Закладки: 0</a></li>
           <li class="top-link basket"><a href="#">Корзина: 0</a></li>
           <li class="top-link checkout"><a href="#">Оформить заказ</a></li>
         </ul>
@@ -35,12 +41,18 @@
           Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта
         </p>
         <div class="header-address">
-          <a href="tel:+78125550555">+7(812)555-05-55</a>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
           <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
         </div>
-        <div class="registration">
-          <a href="#">Войти</a>
-          <a href="#">Регистрация</a>
+        <div class="user-menu">
+          <a class="login" href="#">
+              <svg fill="#c5c5c5"  xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+                <path d="M14.875 8.5L6 0v6H0v5h6v6z"/>
+                <path d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/>
+              </svg>  
+            Войти
+          </a>
+          <a class="registration" href="#">Регистрация</a>
         </div>
       </div>
       <nav class="navigation">
@@ -62,9 +74,8 @@
       <h2 class="visually-hidden">Промо-блок</h2>
       <div class="menu-left">
         <ul class="menu-left-items">
-          <li class="menu-item">
+          <li class="menu-item new">
             <h3>Материалы</h3>
-            <img src="#" alt="Новинка">
             <a href="#">На любой вкус</a>
           </li>
           <li class="menu-item">
@@ -85,11 +96,9 @@
             <!--<img src="img\slider-perfs.jpg" width="620" height="266" alt="Перфораторы">-->
             <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
+          <button class="btn-slider btn-left" type="button"><span class="visually-hidden">Назад</span></button>
+          <button class="btn-slider btn-right" type="button"><span class="visually-hidden">Вперед</span></button>
         </div>
-        <!-- <button class="btn-left" type="button">
-          <img src="img\icon-left.svg" alt="Назад"></button>
-        <button type="btn-right">
-          <img src="img\icon-right.svg" alt="Вперед">Вперед</button> -->
       </div>
       <ul class="menu-right">
         <li class="menu-item">
@@ -115,11 +124,11 @@
       <ul class="card-items">
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 9000</a></h4>
-          <p class="card-item-img">
+          <!-- <p class="card-item-img"> -->
             <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
-          </p>
-          <p class="del">32500 Р.</p>
-          <p class="price">25500 Р.</p>
+          <!-- </p> -->
+          <span class="del">32500 Р.</span>
+          <span class="price">25500 Р.</span>
           <p class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
@@ -127,11 +136,9 @@
         </li>
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
-          <p class="card-item-img">
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-          </p>
-          <p class="del">22500 Р.</p>
-          <p class="price">15500 Р.</p>
+          <span class="del">22500 Р.</span>
+          <span class="price">15500 Р.</span>
           <p class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
@@ -139,23 +146,18 @@
         </li>
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
-          <p class="card-item-img">
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-          </p>
-          <p class="del">30500 Р.</p>
-          <p class="price">25500 Р.</p>
+          <span class="del">30500 Р.</span>
+          <span class="price">25500 Р.</span>
           <p class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
           </p>
         </li>
-        <li class="card-item">
+        <li class="card-item new">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
-          <img src="#" alt="Новинка">
-          <p class="card-item-img">
             <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-          </p>
-          <p class="price">12500 Р.</p>
+          <span class="price">12500 Р.</span>
           <p class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
@@ -195,23 +197,23 @@
             <li class="services-btn"><a href="#">Гарантия</a></li>
             <li class="services-btn"><a href="#">Кредит</a></li>
           </ul>
-          <div class="service-inf">
+          <div class="service-inf delivery">
             <h3>Доставка</h3>
-            <p class="delivery text-info">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно
+            <p class="text-info">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно
               бесплатно!
               Ведь мы неплохо заработаем, <br>поднимая его на ваш этаж!</p>
           </div>
-          <div class="service-inf visually-hidden">
+          <div class="service-inf guaranty">
             <h3>Гарантия</h3>
-            <p class="guaranty text-info">Если купленный у нас товар поломается или заискрит,
-              а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей
+            <p class="text-info">Если купленный у нас товар поломается или заискрит,<br>
+              а также в случае пожара, спровоцированного его возгоранием,<br> вы всегда можете быть уверены в нашей
               гарантии.
-              Мы обменяем сгоревший товар на новый.
+              Мы обменяем сгоревший товар на новый.<br>
               Дом уж восстановите как-нибудь сами.</p>
           </div>
-          <div class="service-inf visually-hidden">
+          <div class="service-inf credit">
             <h3>Кредит</h3>
-            <p class="credit text-info">Залезть в долговую яму стало проще!
+            <p class="text-info">Залезть в долговую яму стало проще!<br>
               Кредитные консультанты придут вам на помощь.</p>
             <a class="btn-red" href="">Отправить заявку</a>
           </div>
@@ -289,9 +291,8 @@
     </div>
   </footer>
   <!--ПОПАП С ОБРАТНОЙ СВЯЗЬЮ-->
-  <section class="feedback">
+  <section class="feedback visually-hidden">
     <h2 class="visually-hidden">Обратная связь</h2>
-    <!-- <p>Введите свой логин и пароль.</p> -->
     <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
       <div class="feedback-login">
         <div>
@@ -309,13 +310,13 @@
       </div>
       <button class="btn-red" type="submit">Отправить</button>
     </form>
-    <button type="button">Закрыть</button>
+    <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
   </section>
   <!--ПОПАП С КАРТОЙ-->
-  <section class="map">
+  <section class="map visually-hidden">
     <h2 class="visually-hidden">Как до нас добраться</h2>
     <img src="img\map-full.jpg" width="940" height="446" alt="Большая карта">
-    <button type="button">Закрыть</button>
+    <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
   </section>
 </body>
 
