--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         <li class="card-item new">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
             <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-          <span class="price">12500 Р.</span>
+            <span class="del"></span>
+            <span class="price">12500 Р.</span>
           <p class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
