--- a/catalog.html
+++ b/catalog.html
@@ -210,7 +210,8 @@
                 <a class="bookmark-btn" href="">В закладки</a>
               </p>
             </li>
-            <li class="card-item new">
+            <li class="card-item">
+              <span class="new">new</span>
               <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
               <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
@@ -230,7 +231,8 @@
                 <a class="bookmark-btn" href="">В закладки</a>
               </p>
             </li>
-            <li class="card-item new">
+            <li class="card-item">
+              <span class="new">new</span>
               <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
               <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
