--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
       <h2 class="visually-hidden">Промо-блок</h2>
       <div class="menu-left">
         <ul class="menu-left-items">
-          <li class="menu-item new">
+          <li class="menu-item">
+            <span class="new">new</span>
             <h3>Материалы</h3>
             <a href="#">На любой вкус</a>
           </li>
@@ -154,11 +155,12 @@
             <a class="bookmark-btn" href="">В закладки</a>
           </p>
         </li>
-        <li class="card-item new">
+        <li class="card-item">
+          <span class="new">new</span>
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
-            <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-            <span class="del"></span>
-            <span class="price">12500 Р.</span>
+          <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+          <span class="del"></span>
+          <span class="price">12500 Р.</span>
           <p class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
