--- a/catalog.html
+++ b/catalog.html
@@ -172,7 +172,7 @@
             </ul>
             <ul class="sorting-up-down">
               <li>
-                <a class="down-btn sorting-active" href="">
+                <a class="up-btn sorting-active" href="">
                   <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                     <path d="M5.5 0L0 10h11z" />
                   </svg>
@@ -180,7 +180,7 @@
                 </a>
               </li>
               <li>
-                <a class="up-btn" href="">
+                <a class="down-btn" href="">
                   <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                     <path d="M5.5 10L0 0h11" />
                   </svg>
