треугольники сортировки на css

--- a/catalog.html
+++ b/catalog.html
@@ -173,17 +173,19 @@
             <ul class="sorting-up-down">
               <li>
                 <a class="up-btn sorting-active" href="">
-                  <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                  <!-- <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                     <path d="M5.5 0L0 10h11z" />
-                  </svg>
+                  </svg> -->
+                  <span class="triangle-up-btn"></span>
                   <span class="visually-hidden">Вниз</span>
                 </a>
               </li>
               <li>
                 <a class="down-btn" href="">
-                  <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                  <!-- <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                     <path d="M5.5 10L0 0h11" />
-                  </svg>
+                  </svg> -->
+                  <span class="triangle-down-btn"></span>
                   <span class="visually-hidden">Вверх</span>
                 </a>
               </li>
