--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -16,10 +16,10 @@
     <div class="header-top">
       <div class="container">
         <a class="logo-main logo" href="index.html">
-          <img src="img\logo-technomart.svg" width="109" height="18" alt="Техномарт">
+          <img src="img\logo-technomart.svg" width="110" height="19" alt="Техномарт">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search">
-          <input id="search" type="search" placeholder="Поиск" class="search-input">
+          <input id="search" type="search" placeholder="Поиск:" class="search-input">
           <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
             <path
               d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
@@ -41,7 +41,7 @@
           Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта
         </p>
         <div class="header-address">
-          <a href="tel:+78125550555">+7(812)555-05-55</a>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
           <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
         </div>
         <div class="account">
@@ -84,22 +84,22 @@
   </header>
   <main>
     <div class="main-container container">
-      <div class="head-name">
-        <h1>Перфораторы</h1>
-      </div>
       <ul class="breadcrumbs">
         <li><a class="breadcrumbs-main" href="index.html"><span class="visually-hidden">Главная</span></a></li>
-        <li><a href="#">Каталлог</a></li>
+        <li><a href="#">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
         <li class="breadcrumbs-active">Перфораторы</li>
       </ul>
+      <div class="head-name">
+        <h1>Перфораторы</h1>
+      </div>
       <div class="main-content">
         <aside class="aside">
           <h2 class="visually-hidden">Фильтр товаров</h2>
           <p>Фильтр:</p>
           <form action="https://echo.htmlacademy.ru" method="post">
             <fieldset class="price-range">
-              <legend>Цена</legend>
+              <legend>Цена:</legend>
               <div class="range-filter">
                 <div class="range-controls">
                   <div class="scale">
@@ -176,7 +176,6 @@
                   <!-- <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                     <path d="M5.5 0L0 10h11z" />
                   </svg> -->
-                  <span class="triangle-up-btn"></span>
                   <span class="visually-hidden">Вниз</span>
                 </a>
               </li>
@@ -185,7 +184,6 @@
                   <!-- <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                     <path d="M5.5 10L0 0h11" />
                   </svg> -->
-                  <span class="triangle-down-btn"></span>
                   <span class="visually-hidden">Вверх</span>
                 </a>
               </li>
@@ -197,20 +195,20 @@
               <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
               <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
             <li class="card-item">
               <span class="new">new</span>
@@ -218,20 +216,20 @@
               <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
               <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
             <li class="card-item">
               <span class="new">new</span>
@@ -239,54 +237,55 @@
               <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
               <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
             <li class="card-item">
+              <span class="new">new</span>
               <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
               <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
               <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 2000</a></h4>
               <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
-              <p class="buy">
+              <div class="buy">
                 <a class="buy-btn" href="">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
-              </p>
+              </div>
             </li>
           </ul>
           <ul class="pagination">
-            <li class="pagination-active">1</li>
+            <li><a class="pagination-active">1</a></li>
             <li><a href="">2</a></li>
             <li><a href="">3</a></li>
             <li class="next"><a href="">Следующая</a></li>
@@ -298,7 +297,7 @@
       <div class="container">
         <h2>Пара слов о перфораторах</h2>
         <p class="text-info">
-          Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления
+          Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления
           отверстий в кирпиче, бетоне и камне. <br>Существуют электромеханические и пневматические перфораторы.
           Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном
           ряду есть выбор "трехжимников":в одном устройстве будут совмещены отбойный молоток и ударная дрель.
@@ -310,7 +309,7 @@
     <div class="container">
       <div class="footer-top">
         <a class="logo-main logo" href="index.html">
-          <img src="img\logo-technomart.svg" width="109" height="19" alt="Техномарт">
+          <img src="img\logo-technomart.svg" width="138" height="21" alt="Техномарт">
         </a>
         <ul class="footer-top-nav">
           <li><a href=" #">Компания</a></li>
@@ -323,7 +322,7 @@
       <div class="footer-center">
         <p>
           <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
-          <a href="tel:+78125550555">+7(812)555-05-55</a>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
         </p>
         <ul class="footer-center-nav">
           <li><a href="#">Материалы</a></li>
@@ -335,7 +334,7 @@
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <p class="copy">&copy;2010-2017 Компания "Техномарт"<span> Все права защищены</span></p>
+        <p class="copy"><span>&copy; 2010-2019 Компания &laquo;Техномарт&raquo;</span> Все права защищены</p>
         <ul class="social">
           <li><a class="vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
           <li><a class="facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
@@ -345,13 +344,13 @@
           Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-        <p class="htmlacademy">Разработано -
+        <p class="htmlacademy">Разработано —
           <a href="#">htmlacademy.ru</a>
         </p>
       </div>
     </div>
   </footer>
-  <section class="visually-hidden">
+  <div class="visually-hidden">
     <div class="popup-buy">
       <p>Товар добавлен в корзину!</p>
       <div class="popup-buy-btn">
@@ -361,7 +360,7 @@
       <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
     <div class="filter"></div>
-  </section>
+  </div>
 </body>
 
 </html>
