--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
@@ -20,7 +20,7 @@
           <img src="img\logo-technomart.svg" width="109" height="18" alt="Техномарт">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search">
-          <input id="search" type="search" placeholder="Поиск" class="search-input">
+          <input id="search" type="search" placeholder="Поиск:" class="search-input">
           <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
             <path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
           </svg>  
@@ -130,30 +130,30 @@
           <!-- </p> -->
           <span class="del">32500 Р.</span>
           <span class="price">25500 Р.</span>
-          <p class="buy">
+          <div class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
-          </p>
+          </div>
         </li>
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 3000</a></h4>
             <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           <span class="del">22500 Р.</span>
           <span class="price">15500 Р.</span>
-          <p class="buy">
+          <div class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
-          </p>
+          </div>
         </li>
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH<br>BFG 6000</a></h4>
             <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           <span class="del">30500 Р.</span>
           <span class="price">25500 Р.</span>
-          <p class="buy">
+          <div class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
-          </p>
+          </div>
         </li>
         <li class="card-item">
           <span class="new">new</span>
@@ -161,10 +161,10 @@
           <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           <span class="del"></span>
           <span class="price">12500 Р.</span>
-          <p class="buy">
+          <div class="buy">
             <a class="buy-btn" href="">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
-          </p>
+          </div>
         </li>
       </ul>
     </section>
@@ -226,11 +226,11 @@
     <!--СЕКЦИЯ О КОМПАНИИ И КОНТАКТЫ-->
     <div class="about container">
       <section class="info">
-        <h2 class="text-h2">Компания "Техномарт"</h2>
+        <h2 class="text-h2">Компания &laquo;Техномарт&raquo;</h2>
         <p class="text-info">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
         <p class="text-info">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          Техномарт работает со многими транспортными компаниями:</p>
+          <span class="text-logo">Техномарт</span> работает со многими транспортными компаниями:</p>
         <ul class="transport">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
@@ -265,7 +265,7 @@
       <div class="footer-center">
         <p>
           <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
-          <a href="tel:+78125550555">+7(812)555-05-55</a>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
         </p>
         <ul class="footer-center-nav">
           <li><a href="#">Материалы</a></li>
@@ -277,7 +277,7 @@
     </div>
     <div class="footer-bottom">
       <div class="container">
-        <p class="copy">&copy;2010-2017 Компания "Техномарт"<span> Все права защищены </span></p>
+        <p class="copy"><span>&copy; 2010-2019 Компания &laquo;Техномарт&raquo;</span> Все права защищены</p>
         <ul class="social">
           <li><a class="vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
           <li><a class="facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
@@ -287,7 +287,7 @@
           Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
-        <p class="htmlacademy">Разработано -
+        <p class="htmlacademy">Разработано —
           <a href="#">htmlacademy.ru</a>
         </p>
       </div>
