на проверку попытка первая)

--- a/catalog.html
+++ b/catalog.html
@@ -8,11 +8,10 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
-  <!--НАШ ХЕДЕР-->
   <header class="header">
     <div class="header-top">
       <div class="container header-top-container">
@@ -46,7 +45,6 @@
           <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
         </div>
         <div class="account">
-          <!--ТУТ НАДО ПОРАБОТАТЬ-->
           <p class="user-menu enter-account">
             <a class="user-name" href="account.html">
               <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
@@ -168,23 +166,17 @@
             <p>Сортировка:</p>
             <ul class="sorting-how">
               <li><a class="sorting-active" href="">По цене</a></li>
-              <li><a href="">По типу</a></li>
-              <li><a href="">По функционалу</a></li>
+              <li><a href="#">По типу</a></li>
+              <li><a href="#">По функционалу</a></li>
             </ul>
             <ul class="sorting-up-down">
               <li>
                 <a class="up-btn sorting-active" href="">
-                  <!-- <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                    <path d="M5.5 0L0 10h11z" />
-                  </svg> -->
                   <span class="visually-hidden">Вниз</span>
                 </a>
               </li>
               <li>
                 <a class="down-btn" href="">
-                  <!-- <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                    <path d="M5.5 10L0 0h11" />
-                  </svg> -->
                   <span class="visually-hidden">Вверх</span>
                 </a>
               </li>
@@ -293,9 +285,9 @@
           </ul>
           <ul class="pagination">
             <li><a class="pagination-active">1</a></li>
-            <li><a href="">2</a></li>
-            <li><a href="">3</a></li>
-            <li class="next"><a href="">Следующая</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li class="next"><a href="#">Следующая</a></li>
           </ul>
         </section>
       </div>
@@ -368,7 +360,6 @@
     </div>
     <div class="filter"></div>
   </div>
-  <script src="js/script.js"></script>
 </body>
 
 </html>
