--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body>
-  <!--НАШ ХЕДЕР-->
   <header class="header">
     <div class="header-top">
       <div class="container header-top-container">
         <a class="logo-main">
-          <img src="img/logo-technomart.svg" width="109" height="18" alt="логотип Техномарт">
+          <img src="img/logo-technomart.svg" width="108" height="17" alt="логотип Техномарт">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search">
           <input id="search" type="search" placeholder="Поиск:" class="search-input">
@@ -71,7 +70,6 @@
       </nav>
     </div>
   </header>
-  <!--НАШЕ ТЕЛО-->
   <main>
     <section class="menu container">
       <h2 class="visually-hidden">Промо-блок</h2>
@@ -88,14 +86,14 @@
           </li>
         </ul>
         <div class="slider">
-          <div class="slide slide-1">
-            <h3>Дрели</h3>
-            <p>Соседям на радость!</p>
-            <a class="btn-red" href="catalog.html">Открыть каталог</a>
-          </div>
-          <div class="slide slide-2 visually-hidden">
+          <div class="slide slide-1 visually-hidden">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
+            <a class="btn-red" href="catalog.html">Открыть каталог</a>
+          </div>
+          <div class="slide slide-2">
+            <h3>Дрели</h3>
+            <p>Соседям на радость!</p>
             <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
           <button class="btn-slider btn-left" type="button"><span class="visually-hidden">Назад</span></button>
@@ -121,7 +119,6 @@
         </li>
       </ul>
     </section>
-    <!--СЕКЦИЯ ПОПУЛЯРНЫХ ТОВАРОВ-->
     <section class="popular-items container">
       <div class="popular">
         <h2>Популярные товары:</h2>
@@ -174,7 +171,6 @@
         </li>
       </ul>
     </section>
-    <!--СЕКЦИЯ ПОПУЛЯРНЫХ БРЕНДОВ-->
     <section class="popular-brands container">
       <div class="popular">
         <h2>Популярные производители:</h2>
@@ -192,7 +188,6 @@
         <li class="brand-item"><a href="#"><img src="img/metabo.png" width="204" height="69" alt="Metabo"></a></li>
       </ul>
     </section>
-    <!--СЕКЦИЯ СЕРВИСОВ-->
     <section class="services">
       <div class="container services-container">
         <div class="services-description">
@@ -202,11 +197,11 @@
         </div>
         <div class="services-info">
           <ul>
-            <li class="services-btn"><a href="#">Доставка</a></li>
-            <li class="services-btn"><a href="#">Гарантия</a></li>
-            <li class="services-btn"><a href="#">Кредит</a></li>
+            <li class="service-btn"><a class="service-link service-link-active" href="#">Доставка</a></li>
+            <li class="service-btn"><a class="service-link" href="#">Гарантия</a></li>
+            <li class="service-btn"><a class="service-link" href="#">Кредит</a></li>
           </ul>
-          <div class="service-inf delivery">
+          <div class="service-inf delivery service-inf-active">
             <h3>Доставка</h3>
             <p class="text-info">Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершенно
               бесплатно!
@@ -229,7 +224,6 @@
         </div>
       </div>
     </section>
-    <!--СЕКЦИЯ О КОМПАНИИ И КОНТАКТЫ-->
     <div class="about container">
       <section class="info">
         <h2 class="text-h2">Компания &laquo;Техномарт&raquo;</h2>
@@ -248,12 +242,14 @@
       <section class="contacts">
         <h2 class="text-h2">Контакты</h2>
         <p class="text-info">Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a class="mini-map" href="map.html"><img src="img/map.jpg" width="300" height="158" alt="Карта с адресом г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></a>
+        <a class="mini-map" target="_blank"
+          href="https://yandex.ua/maps/2/saint-petersburg/?from=api-maps&ll=30.310733%2C59.939764&mode=search&origin=jsapi_2_1_74&sll=30.310733%2C59.939764&text=%D0%B3.%20%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3%2C%20%D1%83%D0%BB.%20%D0%91.%20%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F%2C%20%D0%B4.%2019%2F8&z=15"><img
+            src="img/map.jpg" width="300" height="158"
+            alt="Карта с адресом г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></a>
         <a class="btn-red feedback-btn" href="feedback.html">Заблудились? Напишите нам!</a>
       </section>
     </div>
   </main>
-  <!--НАШ ФУТЕР-->
   <footer class="footer">
     <div class="container footer-top-container">
       <div class="footer-top">
@@ -299,7 +295,6 @@
       </div>
     </div>
   </footer>
-  <!--ПОПАП С ОБРАТНОЙ СВЯЗЬЮ-->
   <section class="popup-feedback">
     <div class="feedback">
       <h2 class="visually-hidden">Обратная связь</h2>
@@ -324,12 +319,11 @@
     </div>
     <div class="filter"></div>
   </section>
-  <!--ПОПАП С КАРТОЙ-->
   <section class="popup-map">
     <div class="map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <!-- <img src="img/map-full.jpg" width="940" height="446" alt="Большая карта"> -->
-      <!-- <iframe src="https://yandex.by/map-widget/v1/-/CGDdI0Il" width="940" height="446" frameborder="0" allowfullscreen="true"></iframe> -->
+      <iframe src="https://yandex.by/map-widget/v1/-/CGDdI0Il" width="940" height="446" frameborder="0"
+        allowfullscreen="true"></iframe>
       <button class="close close-map" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
     <div class="filter filter-map"></div>
@@ -345,7 +339,7 @@
     </div>
     <div class="filter"></div>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
