--- a/index.html
+++ b/index.html
@@ -322,8 +322,7 @@
   <section class="popup-map">
     <div class="map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <iframe src="https://yandex.by/map-widget/v1/-/CGDdI0Il" width="940" height="446" frameborder="0"
-        allowfullscreen="true"></iframe>
+      <iframe src="https://yandex.by/map-widget/v1/-/CGDdI0Il" width="940" height="446"></iframe>
       <button class="close close-map" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
     <div class="filter filter-map"></div>
