--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans+Narrow%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
@@ -317,7 +313,6 @@
       </form>
       <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
-    <div class="filter"></div>
   </section>
   <section class="popup-map">
     <div class="map">
@@ -325,7 +320,6 @@
       <iframe src="https://yandex.by/map-widget/v1/-/CGDdI0Il" width="940" height="446"></iframe>
       <button class="close close-map" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
-    <div class="filter filter-map"></div>
   </section>
   <div class="popup-buy-container">
     <div class="popup-buy">
@@ -336,7 +330,6 @@
       </div>
       <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
-    <div class="filter"></div>
   </div>
   <script src="js/script.min.js"></script>
 </body>
