--- a/catalog.html
+++ b/catalog.html
@@ -4,10 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans+Narrow%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
@@ -16,7 +13,7 @@
     <div class="header-top">
       <div class="container header-top-container">
         <a class="logo-main logo" href="index.html">
-          <img src="img/logo-technomart.svg" width="110" height="19" alt="логотип Техномарт">
+          <img src="img/logo-technomart.svg" width="108" height="17" alt="логотип Техномарт">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search">
           <input id="search" type="search" placeholder="Поиск:" class="search-input">
@@ -133,12 +130,12 @@
                 <span class="check-box"></span>
                 MAKITA
               </label>
-              <label for="dewalt" class="check">
+              <label for="dewalt" class="check label-disabled">
                 <input class="check-input visually-hidden" id="dewalt" type="checkbox" name="dewalt" disabled>
                 <span class="check-box"></span>
                 DEWALT
               </label>
-              <label for="hitachi" class="check">
+              <label for="hitachi" class="check label-disabled">
                 <input class="check-input visually-hidden" id="hitachi" type="checkbox" name="hitachi" disabled checked>
                 <span class="check-box"></span>
                 HITACHI
@@ -358,7 +355,6 @@
       </div>
       <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
-    <div class="filter"></div>
   </div>
 </body>
 
