--- a/catalog.html
+++ b/catalog.html
@@ -356,6 +356,7 @@
       <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
   </div>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
