--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="index">
   <header class="header">
     <div class="header-top">
       <div class="container header-top-container">
